--- a/index.html
+++ b/index.html
@@ -21,88 +21,16 @@
     
     <nav>
         <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#publications">Publications</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="publications.html">Publications</a></li>
+            <li><a href="skills.html">Skills</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Bioinformatics researcher with expertise in computational genomics, programming, and molecular biology. Passionate about leveraging computational tools to solve complex biological problems.</p>
-    </section>
-
-    <section id="education">
-        <h2>Education</h2>
-        <div class="education-item">
-            <h3>Master of Science in Bioinformatics</h3>
-            <p>Northeastern University, Boston, Massachusetts, USA | GPA: 4.0 | July 2026</p>
-            <p>Courses: Genomics in Bioinformatics, Computational Methods, Bioinformatics Programming</p>
-        </div>
-        <div class="education-item">
-            <h3>Bachelor of Engineering in Biotechnology</h3>
-            <p>Rashtreeya Vidyalaya College of Engineering, Bangalore, India | GPA: 3.8 | August 2024</p>
-            <p>Graduated as Best Outgoing Student</p>
-        </div>
-    </section>
-
-    <section id="experience">
-        <h2>Professional Experience</h2>
-        <div class="experience-item">
-            <h3>Research Assistant</h3>
-            <p>Ondrechen Research Group | September 2024 - Present</p>
-            <p>Leading bioinformatics research on RNA and protein structural conformations.</p>
-        </div>
-        <div class="experience-item">
-            <h3>Omnichannel Intern</h3>
-            <p>Eli Lilly And Company | January 2024 – July 2024</p>
-            <p>Provided insights into U.S. clinical trials market strategy.</p>
-        </div>
-        <div class="experience-item">
-            <h3>Research Intern & Project Lead</h3>
-            <p>Center of Excellence – Computational Genomics | July 2023 – January 2024</p>
-            <p>Developed a PCOS detection kit and a public bioinformatics tool for protein disorder prediction.</p>
-        </div>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>Microbial Review & Nanoparticle Drug Delivery Systems</strong> (May 2023 - August 2023) <br>
-                <a href="#">Publication 1</a> | <a href="#">Publication 2</a></li>
-            <li><strong>RVSAT: India’s First Microbiological Payload</strong> (August 2021 - August 2023) <br>
-                <a href="#">IAC’22 Paris, Presentation 1</a> | <a href="#">IAC’22 Paris, Presentation 2</a></li>
-        </ul>
-    </section>
-
-    <section id="publications">
-        <h2>Publications</h2>
-        <ul>
-            <li><a href="#">Lactobacillus Planatareum: A Comprehensive Review</a></li>
-            <li><a href="#">Nanoparticle-Based Drug Delivery System</a></li>
-            <li><a href="#">Effects of Long-Term Human Space Flight</a></li>
-        </ul>
-    </section>
-
-    <section id="skills">
-        <h2>Technical Skills</h2>
-        <ul>
-            <li><strong>Programming:</strong> Python, R, C, Bash, SQL</li>
-            <li><strong>Bioinformatics Tools:</strong> Schrodinger, AutoDock, Galaxy</li>
-            <li><strong>Lab Techniques:</strong> Western Blotting, Flow Cytometry, PCR, ELISA</li>
-        </ul>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:radhakrishnan.y@northeastern.edu">radhakrishnan.y@northeastern.edu</a></p>
-        <p>Location: Boston, Massachusetts, USA</p>
-    </section>
-
+    
     <footer>
         <p>&copy; 2025 Yeshaswini Radhakrishnan | All Rights Reserved</p>
     </footer>
