--- a/index.html
+++ b/index.html
@@ -20,6 +20,26 @@
             });
         });
     </script>
+    <style>
+        .content-section {
+            padding: 50px;
+            max-width: 900px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        h1 {
+            font-size: 32px;
+            margin-bottom: 20px;
+        }
+        h2 {
+            font-size: 24px;
+            margin-top: 20px;
+        }
+        p {
+            font-size: 18px;
+            line-height: 1.6;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
