--- a/index.html
+++ b/index.html
@@ -22,24 +22,26 @@
     </script>
     <style>
         .content-section {
-            padding: 80px 50px;
-            max-width: 1200px;
+            padding: 100px 50px;
+            max-width: 1400px;
             margin: 0 auto;
             text-align: left;
         }
         h1 {
-            font-size: 42px;
-            margin-bottom: 40px;
+            font-size: 50px;
+            margin-bottom: 50px;
             text-align: center;
             text-transform: uppercase;
+            color: white;
         }
         h2 {
-            font-size: 32px;
-            margin-top: 40px;
+            font-size: 38px;
+            margin-top: 50px;
             text-align: center;
+            color: white;
         }
         p {
-            font-size: 22px;
+            font-size: 24px;
             line-height: 2;
             text-align: justify;
         }
@@ -68,10 +70,12 @@
                     <img src="IMG_3028.jpeg" alt="Yeshaswini Radhakrishnan" class="profile-pic">
                     <h1 class="name">Yeshaswini Radhakrishnan</h1>
                     <p class="description">
-                        I am a dedicated bioinformatics researcher with expertise in computational genomics, molecular biology, and AI-driven biomedical discoveries.
-                        My work is focused on identifying genetic biomarkers, optimizing computational drug design, and leveraging machine learning techniques in
-                        genomics. Currently pursuing my MS in Bioinformatics at Northeastern University, I have contributed to multiple research projects in
-                        both academic and industry settings.
+                        I am a dedicated bioinformatics researcher specializing in computational genomics, molecular biology, and AI-driven biomedical discoveries.
+                        I am passionate about integrating biology with computational sciences to develop cutting-edge solutions for genomic analysis, personalized medicine,
+                        and novel drug discovery approaches. With a strong foundation in both wet and dry lab techniques, I bridge the gap between biological research and
+                        computational modeling. Currently, I am advancing my expertise through my MS in Bioinformatics at Northeastern University, working on projects
+                        that involve large-scale sequencing data, biomarker identification, and systems biology modeling. I am also deeply interested in precision medicine
+                        and the application of artificial intelligence in healthcare. 
                     </p>
                 </div>
             </section>
@@ -82,20 +86,12 @@
                 <p><strong>Northeastern University, Boston, MA</strong> | GPA: 4.0 | Expected: 2026</p>
                 <p>Specialized coursework in genomics, computational methods, systems biology, and structural bioinformatics.</p>
                 <p>Developing expertise in high-throughput sequencing data analysis, predictive modeling, and precision medicine applications.</p>
+                <p>Engaged in computational research on the impact of genetic mutations in neurodegenerative diseases and pediatric cancers.</p>
                 <h2>Bachelor of Engineering in Biotechnology</h2>
                 <p><strong>RV College of Engineering, Bangalore, India</strong> | GPA: 3.8 | Best Outgoing Student</p>
                 <p>Extensive laboratory research experience, particularly in proteomics, genomics, and nanobiotechnology.</p>
                 <p>Completed an honors thesis focusing on secondary metabolites in medicinal plants and their therapeutic applications.</p>
-            </section>
-            
-            <section id="experience" class="content-section">
-                <h1>Experience</h1>
-                <h2>Research Assistant - Ondrechen Research Group</h2>
-                <p>Developing computational models to analyze protein structural conformations and their functional impact.</p>
-                <p>Optimizing GRASP FUNC algorithms to enhance protein superfamily classification and annotation accuracy.</p>
-                <h2>Omnichannel Intern - Eli Lilly and Company</h2>
-                <p>Conducted in-depth pharmaceutical data analysis to support strategic market decisions.</p>
-                <p>Collaborated with cross-functional teams to streamline drug development insights.</p>
+                <p>Led a research team in identifying drug targets for rare genetic disorders using bioinformatics techniques.</p>
             </section>
             
             <section id="resume" class="content-section">
