--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
     </script>
     <style>
         .content-section {
-            padding: 100px 50px;
+            padding: 80px 50px;
             max-width: 1400px;
             margin: 0 auto;
             text-align: left;
         }
         h1 {
-            font-size: 50px;
-            margin-bottom: 50px;
+            font-size: 40px;
+            margin-bottom: 40px;
             text-align: center;
             text-transform: uppercase;
-            color: white;
+            color: black;
         }
         h2 {
-            font-size: 38px;
-            margin-top: 50px;
+            font-size: 30px;
+            margin-top: 40px;
             text-align: center;
-            color: white;
+            color: black;
         }
         p {
-            font-size: 24px;
-            line-height: 2;
+            font-size: 20px;
+            line-height: 1.8;
             text-align: justify;
         }
     </style>
@@ -71,11 +71,11 @@
                     <h1 class="name">Yeshaswini Radhakrishnan</h1>
                     <p class="description">
                         I am a dedicated bioinformatics researcher specializing in computational genomics, molecular biology, and AI-driven biomedical discoveries.
-                        I am passionate about integrating biology with computational sciences to develop cutting-edge solutions for genomic analysis, personalized medicine,
-                        and novel drug discovery approaches. With a strong foundation in both wet and dry lab techniques, I bridge the gap between biological research and
-                        computational modeling. Currently, I am advancing my expertise through my MS in Bioinformatics at Northeastern University, working on projects
-                        that involve large-scale sequencing data, biomarker identification, and systems biology modeling. I am also deeply interested in precision medicine
-                        and the application of artificial intelligence in healthcare. 
+                        My expertise spans genomic data analysis, precision medicine, and the integration of AI in biological research. With a strong foundation in wet and dry lab techniques,
+                        I focus on understanding complex biological systems, developing novel bioinformatics pipelines, and enhancing personalized healthcare through computational models.
+                        My passion for bioinformatics has led me to work on high-impact research in protein structure analysis, biomarker identification, and evolutionary genomics.
+                        I am also an advocate for interdisciplinary collaboration, integrating biotechnology, programming, and clinical research to push the frontiers of biomedical advancements.
+                        My goal is to contribute to pioneering discoveries that transform the future of medicine and healthcare.
                     </p>
                 </div>
             </section>
@@ -84,14 +84,16 @@
                 <h1>Education</h1>
                 <h2>Master of Science in Bioinformatics</h2>
                 <p><strong>Northeastern University, Boston, MA</strong> | GPA: 4.0 | Expected: 2026</p>
-                <p>Specialized coursework in genomics, computational methods, systems biology, and structural bioinformatics.</p>
-                <p>Developing expertise in high-throughput sequencing data analysis, predictive modeling, and precision medicine applications.</p>
-                <p>Engaged in computational research on the impact of genetic mutations in neurodegenerative diseases and pediatric cancers.</p>
+                <p>Comprehensive coursework in computational genomics, structural bioinformatics, and advanced data-driven biological research.</p>
+                <p>Developed expertise in machine learning applications in genomics, next-generation sequencing analysis, and computational modeling for drug discovery.</p>
+                <p>Conducting independent research in pediatric neuroblastoma biomarker identification using high-throughput omics data.</p>
+                <p>Actively involved in collaborations with computational biology labs to enhance precision medicine techniques and novel therapeutic strategies.</p>
                 <h2>Bachelor of Engineering in Biotechnology</h2>
                 <p><strong>RV College of Engineering, Bangalore, India</strong> | GPA: 3.8 | Best Outgoing Student</p>
-                <p>Extensive laboratory research experience, particularly in proteomics, genomics, and nanobiotechnology.</p>
-                <p>Completed an honors thesis focusing on secondary metabolites in medicinal plants and their therapeutic applications.</p>
-                <p>Led a research team in identifying drug targets for rare genetic disorders using bioinformatics techniques.</p>
+                <p>Extensive research on proteomics, genetic regulation, and computational drug discovery through interdisciplinary projects.</p>
+                <p>Developed a novel framework for analyzing secondary metabolites in medicinal plants, contributing to pharmacogenomic databases.</p>
+                <p>Led a team investigating novel drug targets using molecular docking and machine learning approaches for rare genetic disorders.</p>
+                <p>Completed a high-impact thesis focused on structural insights into drug-receptor interactions using advanced bioinformatics tools.</p>
             </section>
             
             <section id="resume" class="content-section">
