--- a/index.html
+++ b/index.html
@@ -103,9 +103,12 @@
             
             <section id="publications" class="content-section">
                 <h1>Publications</h1>
-                <p>Published articles in high-impact journals focusing on genomic medicine, computational biology, and cancer research.</p>
-                <p>Researched the effects of long-term spaceflight on astronaut physiology, presenting findings at international conferences.</p>
-                <p>Developed a nanoparticle-based drug delivery system for targeting tumor microenvironments.</p>
+                <ul>
+                    <li><a href="https://ijsrem.com/download/lactobacillus-plantarum-a-comprehensive-review/" target="_blank">Lactobacillus Planatareum: A comprehensive Review</a> - Published in the International Journal of Scientific Research in Engineering and Management (IJSREM), Volume 07, Issue 07, July 2023.</li>
+                    <li><a href="https://ijsrem.com/download/nanoparticle-based-drug-delivery-system-for-targeting-tumor-microenvironment/" target="_blank">Nanoparticle-based drug delivery system for targeting tumor microenvironment</a> - Published in IJSREM, Volume 07, Issue 08, August 2023.</li>
+                    <li><a href="https://iafastro.directory/iac/paper/id/73524/summary/" target="_blank">Effects of long-term human space flight</a> - A consolidated review on the pathophysiology of SANS and its countermeasures, presented at the 73rd International Astronautical Congress, Paris.</li>
+                    <li><a href="https://iafastro.directory/iac/paper/id/73221/summary/" target="_blank">Open Space: A review of privatization and space policy in India</a> - Published in the 73rd International Astronautical Congress, Paris.</li>
+                </ul>
             </section>
             
             <section id="skills" class="content-section">
@@ -131,7 +134,7 @@
                 <h1>Contact</h1>
                 <p>Email: <a href="mailto:radhakrishnan.y@northeastern.edu">radhakrishnan.y@northeastern.edu</a></p>
                 <p>Phone: +1 (781) 426 5545</p>
-                <p>LinkedIn: <a href="#">LinkedIn Profile</a></p>
+                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/yeshaswini-radhakrishnan-589306325/" target="_blank">Connect with me</a></p>
             </section>
         </main>
     </div>
