--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@
                 <h1>Resume</h1>
                 <p><a href="myresume.pdf" target="_blank">Download Resume (PDF)</a></p>
             </section>
+            <section id="contact" class="content-section">
+                <h1>Contact</h1>
+                <p>Email: <a href="mailto:radhakrishnan.y@northeastern.edu">radhakrishnan.y@northeastern.edu</a></p>
+                <p>Phone: +1 (781) 426 5545</p>
+                <p>LinkedIn: <a href="https://www.linkedin.com/in/yeshaswini-radhakrishnan-589306325/" target="_blank">Connect with me</a></p>
+            </section>
         </main>
     </div>
         </main>
