--- a/index.html
+++ b/index.html
@@ -115,14 +115,14 @@
             
              <section id="projects" class="content-section">
                 <h1>Academic Projects</h1>
-                <h2>Microbial Review & Nanoparticle Drug Delivery Systems (May 2023 - August 2023)</h2>
+                <h2>Microbial Review & Nanoparticle Drug Delivery Systems </h2>
                 <p><strong>Rashtreeya Vidyalaya College of Engineering</strong> (<a href="https://ijsrem.com/download/lactobacillus-plantarum-a-potential-health-booster-a-comprehensive-review/">Publication 1</a>, <a href="https://ijsrem.com/download/nanoparticle-based-drug-delivery-systems-for-targeting-tumor-micro-environment/">Publication 2</a>)</p>
                 <ul>
                     <li>Examined <em>Lactobacillus plantarum</em>'s potential for probiotic and industrial uses while analyzing its stress resistance mechanisms.</li>
                     <li>Reviewed a nanoparticle-based drug delivery model for targeting tumor microenvironments through computational simulations.</li>
                 </ul>
                 
-                <h2>RVSAT: India’s First Microbiological Payload (August 2021 - August 2023)</h2>
+                <h2>RVSAT: India’s First Microbiological Payload </h2>
                 <p><strong>Team Antariksh, RVCE</strong> (<a href="https://iafastro.directory/iac/paper/id/70705/summary/">IAC’22 Paris, Presentation 1</a>, <a href="https://iafastro.directory/iac/paper/id/69928/summary/">IAC’22 Paris, Presentation 2</a>)</p>
                 <ul>
                     <li>Conducted microbial viability studies in simulated space conditions, validating survivability for extended missions.</li>
@@ -133,8 +133,10 @@
             <section id="publications" class="content-section">
                 <h1>Publications</h1>
                 <ul>
-                    <li><a href="https://ijsrem.com/download/lactobacillus-plantarum-a-comprehensive-review/" target="_blank">Lactobacillus Planatareum: A Comprehensive Review</a></li>
-                    <li><a href="https://ijsrem.com/download/nanoparticle-based-drug-delivery-systems-for-targeting-tumor-micro-environment/" target="_blank">Nanoparticle-based Drug Delivery System</a></li>
+                    <li>Lactobacillus Plantarum: A Potential Health Booster – A Comprehensive Review</a></li>
+                    <li>NANOPARTICLE BASED DRUG DELIVERY SYSTEMS FOR TARGETING TUMOR MICRO ENVIRONMENT</a></li>
+                    <li>Effects of long term human space flight: A consolidated review on the pathophysiology of SANS ans its countermeasures</li>
+                    <li>Open Space: A review of privatization and space policy in India</li>
                 </ul>
             </section>
             <section id="publications" class="content-section">
