--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             
             <section id="resume" class="content-section">
                 <h1>Resume</h1>
-                <p><a href="myresume.pdf" target="_blank">Download Resume (PDF)</a></p>
+                <p><a href="myresume.docx" target="_blank">Download Resume</a></p>
             </section>
             <section id="contact" class="content-section">
                 <h1>Contact</h1>
