--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ including but not limited to electronics and control, power system, thermal cont
     </div>
     
     <footer>
-        <p>&copy; 2025 Yeshaswini Radhakrishnan | All Rights Reserved</p>
+        <p>&copy; 2025 Yeshaswini Radhakrishnan |This template is adapted from Colorlib </p>
     </footer>
 </body>
 </html>
